{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 15,
  "lineage": "f240a6b5-b2ab-8f6f-8ed5-37656b3c91fd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ApacheServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05e86b3611c60b0b4",
            "arn": "arn:aws:ec2:us-east-1:233315056797:instance/i-0cf6959a5e32eecd3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cf6959a5e32eecd3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00c0f8d4b4add1b3b"
              }
            ],
            "primary_network_interface_id": "eni-00c0f8d4b4add1b3b",
            "private_dns": "ip-172-31-39-80.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.39.80",
            "public_dns": "ec2-54-158-128-184.compute-1.amazonaws.com",
            "public_ip": "54.158.128.184",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01452384e6a73dc85",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "apache_security_group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3a9a82594054a1c",
            "tags": {
              "Name": "Apache_Proxy_Server"
            },
            "tags_all": {
              "Name": "Apache_Proxy_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-084ac1583304d8e00"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "233315056797",
            "id": "i-0cf6959a5e32eecd3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.TomcatServer",
            "aws_security_group.apache_sg",
            "aws_security_group.tomcat_sg",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TomcatServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05e86b3611c60b0b4",
            "arn": "arn:aws:ec2:us-east-1:233315056797:instance/i-0bb386c0edc61a708",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb386c0edc61a708",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-089f4eef74842ba90"
              }
            ],
            "primary_network_interface_id": "eni-089f4eef74842ba90",
            "private_dns": "ip-172-31-24-166.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.166",
            "public_dns": "ec2-34-228-170-8.compute-1.amazonaws.com",
            "public_ip": "34.228.170.8",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cfd1e9e61478710b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "tomcat_security_group_restricted"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0648a4780cda8bfe4",
            "tags": {
              "Name": "Tomcat-Server-HTTP"
            },
            "tags_all": {
              "Name": "Tomcat-Server-HTTP"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-008d6837e93de1600"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "233315056797",
            "id": "i-0bb386c0edc61a708",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.apache_sg",
            "aws_security_group.tomcat_sg",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apache_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233315056797:security-group/sg-084ac1583304d8e00",
            "description": "permitir ssh(22) y http(80)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084ac1583304d8e00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "apache_security_group",
            "name_prefix": "",
            "owner_id": "233315056797",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0feda53f24f1e2698"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "233315056797",
            "id": "sg-084ac1583304d8e00",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tomcat_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233315056797:security-group/sg-008d6837e93de1600",
            "description": "Permitir SSH y 8080 para Tomcat",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008d6837e93de1600",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084ac1583304d8e00"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "tomcat_security_group_restricted",
            "name_prefix": "",
            "owner_id": "233315056797",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0feda53f24f1e2698"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "233315056797",
            "id": "sg-008d6837e93de1600",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.apache_sg"
          ]
        }
      ]
    }
  ]
}